k8s/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitoring-web
  template:
    metadata:
      labels:
        app: monitoring-web
    spec:
      containers:
      - image: monitoring-web:1.0
        imagePullPolicy: Never
        name: web
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
