k8s/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: monitoring-grafana
  type: LoadBalancer
  # type: NodePort
