k8s/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
spec:
  ports:
  - port: 1881
    targetPort: 1881
  selector:
    app: monitoring-mosquitto
  type: LoadBalancer
