k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
spec:
  ports:
  - port: 80
    targetPort: 5000
  selector:
    run: monitoring
